# MUPOL-MPC

./: .gitignore  README.md  example.py  profiler.py  pyproject.toml
config/: config.ini  config_scalability.ini  logger_config.ini  logger_config_scalability.ini
mupol/mpc/: input_uploader.py  solver.py
mupol/mpc/utils/: args_handler.py  logger.py  mpyc_vector_functions.py
tests/: conftest.py  test_example.py  test_input_uploader.py  test_mpyc_functions.py  test_profiler.py  test_solver.py
